Crash with -webkit-radial-gradient(top) gradient https://bugs.webkit.org/show_bug.cgi?id=66686

Source/WebCore:

Reviewed by Darin Adler.

Null-check the current value after calling parseFillPosition(),
since it may be null for gradients with degenerate arguments.

Test: fast/gradients/css3-radial-gradient-crash.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseRadialGradient):

LayoutTests:

Reviewed by Darin Adler.

Test case with degenerate arguments in a radial gradient.

* fast/gradients/css3-radial-gradient-crash-expected.txt: Added.
* fast/gradients/css3-radial-gradient-crash.html: Added.

Canonical link: https://commits.webkit.org/83134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94215 268f45cc-cd09-0410-ab3c-d52691b4dbfc